// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`TOCEntry > creates snapshot 1`] = `
<DocumentFragment>
  <div
    class="_dropdownItem_98975a dropdownItem"
  >
    <a
      aria-label="Go to Installing the Chart"
      aria-selected="false"
      class="btn btn-link d-inline-block w-100 text-decoration-none ms-0 text-muted text-start _btn_98975a _level1_98975a"
      href="/#installing-the-chart"
      role="option"
      tabindex="-1"
    >
      Installing the Chart
    </a>
  </div>
</DocumentFragment>
`;

exports[`TOCEntry creates snapshot 1`] = `
<DocumentFragment>
  <div
    class="dropdownItem dropdownItem"
  >
    <a
      aria-label="Go to Installing the Chart"
      aria-selected="false"
      class="btn btn-link d-inline-block w-100 text-decoration-none ms-0 text-muted text-start btn level1"
      href="/#installing-the-chart"
      role="option"
      tabindex="-1"
    >
      Installing the Chart
    </a>
  </div>
</DocumentFragment>
`;
